# Recommendation-System

./: pyproject.toml
app/: clustering.py  fuzzy_logic.py  generate_synthetic_data.py  main.py
data/: synthetic_teaching_data.csv
models/: advanced_clustering_model.pkl  feature_columns.pkl  hierarchical_clustering_model.pkl
